--- a/Clash of Spells.csproj
+++ b/Clash of Spells.csproj
@@ -283,6 +283,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Entities\Player\Player.cs" />
+    <Compile Include="Assets\Position.cs" />
     <Compile Include="Assets\Scripts\Air.cs" />
     <Compile Include="Assets\Scripts\Card.cs" />
     <Compile Include="Assets\Scripts\Cards.cs" />
